Improved import times